# travel-assistant

./: .gitignore  README.md  main.py  mutagen.yml  package.json  pyproject.toml  start_ollama.sh
backend/: AGENT.md  Modelfile  agent.py  geocoding.py  geocoding.py:Zone.Identifier  main.py  mcpconfig.json  mcpconfig_all.json  models.py  response.json  sample_itinerary.json  test_agent.py  test_geocoding.py  test_geocoding.py:Zone.Identifier
backend/mcp_servers/mcp_travelassistant/servers/weather_server/weather_data/: forecast_daily_28.5383_-81.3792_20260403_223924.json  forecast_daily_28.5383_-81.3792_20260403_224116.json  forecast_daily_42.657616_-73.780848_20260403_213931.json  forecast_hourly_42.657616_-73.780848_20260403_214501.json  location_28.5383_-81.3792_20260403_223924.json  location_42.657616_-73.780848_20260403_213929.json
backend/system_prompts/: MAIN_AGENT.md  SUMMARY_AGENT.md
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ItineraryDisplay.tsx  Map.tsx  TravelItinerary.tsx  TravelPlannerUI.tsx
frontend/src/services/: itinerary.js
frontend/src/types/: itinerary.types.ts
