[project]
name = "travel-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.6",
    "ddgs>=9.12.1",
    "fastapi[standard]>=0.135.2",
    "fastmcp>=3.1.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.31.0",
    "markdownify>=1.2.2",
    "pydantic-ai>=1.80.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "web-fetch>=0.1.1.3",
]

[tool.pytest.ini_options]
# Automatically run all 'async def' tests without @pytest.mark.asyncio
asyncio_mode = "auto"
